[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "skyhook"
version = "1.0.0"
description = "A secure, zero-config CLI file server with upload capabilities and encrypted transport"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "Skyhook Contributors"}
]
keywords = ["file-server", "upload", "cli", "fastapi", "security"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "python-multipart>=0.0.6",
    "jinja2>=3.1.2",
    "typer>=0.9.0",
    "cryptography>=41.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "httpx>=0.26.0",
]

[project.scripts]
skyhook = "skyhook.main:app"

[project.urls]
Homepage = "https://github.com/skyhook/skyhook"
Documentation = "https://github.com/skyhook/skyhook#readme"
Repository = "https://github.com/skyhook/skyhook"

[tool.setuptools.packages.find]
where = ["src"]
include = ["skyhook*"]

[tool.setuptools.package-data]
skyhook = ["templates/*.html"]